test/Harper/Tests/Good/issue019_genericSe.har
app :: (a -> b) -> a -> b;
app f x = f x;

se :: Integer -> sideeffect -> Integer;
se n = {
  eval printLn "Sideeffect." ();
  return n;
};

main :: sideeffect -> ();
main = {
  eval printLn (app (se 42) ()) ();
};