test/Harper/Tests/Bad/issue025_impureBubbleUp1.har
ref RefBox a = {
    data = {
        a :: a;
    }

    ctor :: a -> impure -> RefBox a;
    ctor a = {
        this.data.a := a;
    };

    get :: impure -> a;
    get = this.data.a;

    set :: a -> impure -> ();
    set a = {
        this.data.a := a;
    };
};

f :: RefBox Integer -> Integer;
f b = 42;

main :: Integer;
main = {
    (b :: RefBox Integer) = RefBox.ctor 42 ();
    return f b;
};